--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -11,6 +11,8 @@
 
   }
 
+  
+
   &_logo > a {
     text-decoration: none;
     text-align: center;
@@ -82,6 +84,12 @@
     box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
     user-select: none;
     touch-action: manipulation;
+    
+  }
+  .connexion_btn img {
+    width: 18px;
+    height: 18px;
+    margin-right: 8px;
   }
 
   &_bottom {
