--- a/assets/styles/pages/_eventAdd.scss
+++ b/assets/styles/pages/_eventAdd.scss
@@ -108,7 +108,6 @@
 .form-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 1.2rem 2rem;
 }
 
 .form-group {
@@ -122,6 +121,7 @@
     display: inline-flex;
     align-items: center;
     gap: 0.3rem;
+    padding-top: 10px;
 
     &::after {
       content: attr(data-required);
@@ -162,7 +162,6 @@
   &.full {
     grid-column: 1 / -1;
   }
-
 }
 
 /* =========================
@@ -205,7 +204,6 @@
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
-
 }
 .tag {
   background-color: #e9ecef;
@@ -228,7 +226,6 @@
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
-
 }
 .selected {
   background-color: #007bff;
@@ -391,32 +388,22 @@
   margin: 2rem auto;
 }
 
-
 /* =========================
    Groupes Dates & Heures
    ========================= */
 
 /* Par défaut (desktop) → rien de spécial */
 .pair-dates,
+.pair-full,
 .pair-time {
-  display: contents; /* agit comme si le wrapper n’existait pas */
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  width: 100%;
 }
-
-/* =========================
-   Responsive (mobile et tablette)
-   ========================= */
-@media (max-width: 768px) {
-  .pair-dates,
-  .pair-time {
-    display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
-    width: 100%;
-  }
-
-  .pair-dates .form-group,
-  .pair-time .form-group {
-    flex: 1;
-    min-width: 150px;
-  }
+.pair-full,
+.pair-dates .form-group,
+.pair-time .form-group {
+  flex: 1;
+  min-width: 150px;
 }
