--- a/assets/styles/pages/_profil.scss
+++ b/assets/styles/pages/_profil.scss
@@ -1,7 +1,14 @@
 .profile_banner {
   position: relative;
-  height: 260px;
-  background: ('/imgages/bannier.png') center/cover no-repeat;
+  height: 290px;
+ 
+}
+.banner_img {
+  width: 100%;
+  height: 100%;
+  background: url('../../images/user/bannier.png') no-repeat center center;
+  background-size: cover;
+  filter: brightness(0.7);
 }
 
 .profile_info {
@@ -19,11 +26,11 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  border: 4px solid #fff;
   object-fit: cover;
 }
 
 .profile_details {
+
   flex: 1;
   margin-left: 20px;
 }
@@ -31,10 +38,11 @@
 .profile_details h2 {
   font-size: 26px;
   font-weight: 700;
+  color: #fff;
 }
 
 .profile_details p {
-  color: #666;
+  color: #faf9f9;
   margin: 4px 0 10px;
 }
 
