refato "route et mise en place de la validation "

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -22,7 +22,7 @@
 @import "layout/footer";
 @import "layout/secLocation";
 @import "layout/category";
-@import "layout/carMett";
+@import "layout/eventNear";
 @import "layout/connexion";
 
 /* Components */
