--- a/assets/styles/settings/_config.variables.scss
+++ b/assets/styles/settings/_config.variables.scss
@@ -24,3 +24,8 @@
   --color-titre-noire: #000000; /* Black */
   --color-titre-blanc: #ffffff; /* White */
 }
+
+:root{
+  // background-image;
+  --bg-image-header: src('../images/header-bg.jpg');
+}
