--- a/assets/styles/layout/_popup.scss
+++ b/assets/styles/layout/_popup.scss
@@ -23,12 +23,14 @@
   border-radius: 12px;
   overflow: hidden;
   width: 850px;
+  height: 580px;
   max-width: 95vw;
   display: flex;
   flex-direction: row;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+
   position: relative;
   animation: popupFade 0.25s ease-out;
+  margin: auto;
 }
 
 /* Animation */
