--- a/assets/styles/pages/_contact.scss
+++ b/assets/styles/pages/_contact.scss
@@ -54,7 +54,7 @@
   height: 80%;
   text-align: center;
   position: relative;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+  margin: auto;
 }
 
 .close-btn {
